// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendrer adresseform riktig ved folkeregistrert bostedsadresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c3 {
  font-size: 11px;
}

.c2 {
  margin-top: 3px;
}

.c2 .typo-etikett-liten {
  line-height: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 > * {
  margin-left: 1em;
}

.c1 {
  margin-top: 2em;
}

<form
  onSubmit={[Function]}
>
  <fieldset
    className="c0"
    disabled={false}
  >
    <h2
      className="typo-undertittel"
    >
      Adresse
    </h2>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={true}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="0"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Bostedsadresse fra folkeregisteret
        </label>
      </div>
    </div>
    <div>
      <p
        className="typo-undertekst"
      >
        Islandsgate 49
      </p>
      <p
        className="typo-undertekst"
      >
        7693 Hovedøya
      </p>
    </div>
    <div
      className="c2"
    >
      <p
        className="typo-etikett-liten"
      >
        <span
          className="c3"
        >
          Endret 
          25.11.2017
           
          i Folkeregisteret
        </span>
      </p>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="1"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i Norge
        </label>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="2"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i utlandet
        </label>
      </div>
    </div>
    <div
      className="c4"
    >
      <button
        className="knapp knapp--standard knapp--disabled"
      >
        Avbryt
      </button>
      <button
        className="knapp knapp--hoved knapp--disabled"
      >
        Endre adresse
      </button>
    </div>
  </fieldset>
</form>
`;

exports[`Rendrer adresseform riktig ved midlertidig gateadresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c3 {
  font-size: 11px;
}

.c2 {
  margin-top: 3px;
}

.c2 .typo-etikett-liten {
  line-height: 1rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 > * {
  margin-left: 1em;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  -webkit-flex: 4;
  -ms-flex: 4;
  flex: 4;
  margin-left: 15px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  margin-top: 2em;
}

<form
  onSubmit={[Function]}
>
  <fieldset
    className="c0"
    disabled={false}
  >
    <h2
      className="typo-undertittel"
    >
      Adresse
    </h2>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="0"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Bostedsadresse fra folkeregisteret
        </label>
      </div>
    </div>
    <div>
      <p
        className="typo-undertekst"
      >
        Islandsgate 49
      </p>
      <p
        className="typo-undertekst"
      >
        7693 Hovedøya
      </p>
    </div>
    <div
      className="c2"
    >
      <p
        className="typo-etikett-liten"
      >
        <span
          className="c3"
        >
          Endret 
          25.11.2017
           
          i Folkeregisteret
        </span>
      </p>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={true}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="1"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i Norge
        </label>
      </div>
      <div
        className="skjemaelement"
      >
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Adressetype
        </label>
        <div
          className="selectContainer input--m"
        >
          <select
            className="skjemaelement__input"
            defaultValue="0"
            disabled={false}
            id={undefined}
            onChange={[Function]}
          >
            <option
              value={0}
            >
              Gateadresse
            </option>
            <option
              value={1}
            >
              Områdeadresse (uten veinavn)
            </option>
            <option
              value={2}
            >
              Postboksadresse
            </option>
          </select>
        </div>
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="skjemaelement"
      >
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Merkes med C/O
        </label>
        <input
          className="skjemaelement__input input--xxl"
          defaultValue={undefined}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          type="text"
        />
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="c4"
      >
        <div
          style={
            Object {
              "flex": 4,
              "marginRight": 15,
            }
          }
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Gateadresse
            </label>
            <input
              className="skjemaelement__input input--xxl"
              defaultValue="Islandsgate"
              id={undefined}
              name={undefined}
              onChange={[Function]}
              type="text"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor={undefined}
          >
            Husnummer
          </label>
          <input
            className="skjemaelement__input input--s"
            defaultValue="49"
            id={undefined}
            name={undefined}
            onChange={[Function]}
            type="text"
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor={undefined}
          >
            Husbokstav
          </label>
          <input
            className="skjemaelement__input input--s"
            defaultValue={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            type="text"
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor={undefined}
          >
            Bolignummer
          </label>
          <input
            className="skjemaelement__input input--s"
            defaultValue={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            type="text"
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor={undefined}
          >
            Postnummer
          </label>
          <input
            className="skjemaelement__input input--s"
            defaultValue="7693"
            id={undefined}
            name={undefined}
            onChange={[Function]}
            type="text"
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="c6"
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Poststed
            </label>
            <input
              className="skjemaelement__input input--xxl"
              disabled={true}
              id={undefined}
              name={undefined}
              type="text"
              value="Hovedøya"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
      </div>
      <label
        className="skjemaelement__label"
        htmlFor="gateform-datovelger"
      >
        Gyldig til
      </label>
      <div
        onBlur={[Function]}
        onKeyDown={[Function]}
        tabIndex={undefined}
      >
        <div
          className="nav-datovelger"
        >
          <p
            className="sr-only"
            id="undefined_srDesc"
          >
            Dato må være mellom "02.01.1970" og "01.01.1971". 
          </p>
          <div
            className="nav-datovelger__inputContainer"
          >
            <input
              aria-describedby="undefined_srDesc"
              aria-invalid={false}
              autoComplete="off"
              autoCorrect="off"
              className="nav-datovelger__input"
              disabled={undefined}
              id="gateform-datovelger"
              maxLength={10}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d{2}.\\\\d{2}.\\\\d{4}"
              type="text"
              value=""
            />
            <button
              aria-expanded={false}
              aria-label="Kalender"
              className="nav-datovelger__kalenderknapp"
              disabled={undefined}
              onClick={[Function]}
              role="button"
              type="button"
            >
              <svg
                aria-hidden="true"
                height={16}
                role="presentation"
                viewBox="0 0 18 18"
                width={16}
              >
                <title>
                  Kalenderikon
                </title>
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="#0067C5"
                >
                  <path
                    d="M4 2.667H1.333v14h15.334v-14H14"
                  />
                  <path
                    d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="2"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i utlandet
        </label>
      </div>
    </div>
    <div
      className="c7"
    >
      <button
        className="knapp knapp--standard knapp--disabled"
      >
        Avbryt
      </button>
      <button
        className="knapp knapp--hoved knapp--disabled"
      >
        Endre adresse
      </button>
    </div>
  </fieldset>
</form>
`;

exports[`Rendrer adresseform riktig ved midlertidig matrikkeladresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c3 {
  font-size: 11px;
}

.c2 {
  margin-top: 3px;
}

.c2 .typo-etikett-liten {
  line-height: 1rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 > * {
  margin-left: 1em;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-flex: 4;
  -ms-flex: 4;
  flex: 4;
  margin-left: 15px;
}

.c1 {
  margin-top: 2em;
}

<form
  onSubmit={[Function]}
>
  <fieldset
    className="c0"
    disabled={false}
  >
    <h2
      className="typo-undertittel"
    >
      Adresse
    </h2>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="0"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Bostedsadresse fra folkeregisteret
        </label>
      </div>
    </div>
    <div>
      <p
        className="typo-undertekst"
      >
        Islandsgate 49
      </p>
      <p
        className="typo-undertekst"
      >
        7693 Hovedøya
      </p>
    </div>
    <div
      className="c2"
    >
      <p
        className="typo-etikett-liten"
      >
        <span
          className="c3"
        >
          Endret 
          25.11.2017
           
          i Folkeregisteret
        </span>
      </p>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={true}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="1"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i Norge
        </label>
      </div>
      <div
        className="skjemaelement"
      >
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Adressetype
        </label>
        <div
          className="selectContainer input--m"
        >
          <select
            className="skjemaelement__input"
            defaultValue="1"
            disabled={false}
            id={undefined}
            onChange={[Function]}
          >
            <option
              value={0}
            >
              Gateadresse
            </option>
            <option
              value={1}
            >
              Områdeadresse (uten veinavn)
            </option>
            <option
              value={2}
            >
              Postboksadresse
            </option>
          </select>
        </div>
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="skjemaelement"
      >
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Merkes med C/O
        </label>
        <input
          className="skjemaelement__input input--xxl"
          defaultValue={undefined}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          type="text"
        />
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="skjemaelement"
      >
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Områdeadresse
        </label>
        <input
          className="skjemaelement__input input--xxl"
          defaultValue={undefined}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          type="text"
        />
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="c4"
      >
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor={undefined}
          >
            Postnummer
          </label>
          <input
            className="skjemaelement__input input--s"
            defaultValue="5468"
            id={undefined}
            name={undefined}
            onChange={[Function]}
            type="text"
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="c5"
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Poststed
            </label>
            <input
              className="skjemaelement__input input--xxl"
              disabled={true}
              id={undefined}
              name={undefined}
              type="text"
              value="Lillomarka"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
      </div>
      <label
        className="skjemaelement__label"
        htmlFor="postboksadresse-gyldig-til"
      >
        Gyldig til
      </label>
      <div
        onBlur={[Function]}
        onKeyDown={[Function]}
        tabIndex={undefined}
      >
        <div
          className="nav-datovelger"
        >
          <p
            className="sr-only"
            id="undefined_srDesc"
          >
            Dato må være mellom "02.01.1970" og "01.01.1971". 
          </p>
          <div
            className="nav-datovelger__inputContainer"
          >
            <input
              aria-describedby="undefined_srDesc"
              aria-invalid={false}
              autoComplete="off"
              autoCorrect="off"
              className="nav-datovelger__input"
              disabled={undefined}
              id="postboksadresse-gyldig-til"
              maxLength={10}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d{2}.\\\\d{2}.\\\\d{4}"
              type="text"
              value=""
            />
            <button
              aria-expanded={false}
              aria-label="Kalender"
              className="nav-datovelger__kalenderknapp"
              disabled={undefined}
              onClick={[Function]}
              role="button"
              type="button"
            >
              <svg
                aria-hidden="true"
                height={16}
                role="presentation"
                viewBox="0 0 18 18"
                width={16}
              >
                <title>
                  Kalenderikon
                </title>
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="#0067C5"
                >
                  <path
                    d="M4 2.667H1.333v14h15.334v-14H14"
                  />
                  <path
                    d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="2"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i utlandet
        </label>
      </div>
    </div>
    <div
      className="c6"
    >
      <button
        className="knapp knapp--standard knapp--disabled"
      >
        Avbryt
      </button>
      <button
        className="knapp knapp--hoved knapp--disabled"
      >
        Endre adresse
      </button>
    </div>
  </fieldset>
</form>
`;

exports[`Rendrer adresseform riktig ved midlertidig postboksadresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c3 {
  font-size: 11px;
}

.c2 {
  margin-top: 3px;
}

.c2 .typo-etikett-liten {
  line-height: 1rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 > * {
  margin-left: 1em;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  -webkit-flex: 4;
  -ms-flex: 4;
  flex: 4;
  margin-left: 15px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  margin-top: 2em;
}

<form
  onSubmit={[Function]}
>
  <fieldset
    className="c0"
    disabled={false}
  >
    <h2
      className="typo-undertittel"
    >
      Adresse
    </h2>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="0"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Bostedsadresse fra folkeregisteret
        </label>
      </div>
    </div>
    <div>
      <p
        className="typo-undertekst"
      >
        Islandsgate 49
      </p>
      <p
        className="typo-undertekst"
      >
        7693 Hovedøya
      </p>
    </div>
    <div
      className="c2"
    >
      <p
        className="typo-etikett-liten"
      >
        <span
          className="c3"
        >
          Endret 
          25.11.2017
           
          i Folkeregisteret
        </span>
      </p>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={true}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="1"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i Norge
        </label>
      </div>
      <div
        className="skjemaelement"
      >
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Adressetype
        </label>
        <div
          className="selectContainer input--m"
        >
          <select
            className="skjemaelement__input"
            defaultValue="2"
            disabled={false}
            id={undefined}
            onChange={[Function]}
          >
            <option
              value={0}
            >
              Gateadresse
            </option>
            <option
              value={1}
            >
              Områdeadresse (uten veinavn)
            </option>
            <option
              value={2}
            >
              Postboksadresse
            </option>
          </select>
        </div>
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="skjemaelement"
      >
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Merkes med C/O
        </label>
        <input
          className="skjemaelement__input input--xxl"
          defaultValue={undefined}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          type="text"
        />
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="c4"
      >
        <div
          style={
            Object {
              "flex": 4,
              "marginRight": 15,
            }
          }
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Postboksanlegg
            </label>
            <input
              className="skjemaelement__input input--xxl"
              defaultValue={undefined}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              type="text"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor={undefined}
          >
            Postboksnummer
          </label>
          <input
            className="skjemaelement__input input--s"
            defaultValue="9698"
            id={undefined}
            name={undefined}
            onChange={[Function]}
            type="text"
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor={undefined}
          >
            Postnummer
          </label>
          <input
            className="skjemaelement__input input--s"
            defaultValue="7705"
            id={undefined}
            name={undefined}
            onChange={[Function]}
            type="text"
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="c6"
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Poststed
            </label>
            <input
              className="skjemaelement__input input--xxl"
              disabled={true}
              id={undefined}
              name={undefined}
              type="text"
              value="Færder fyr"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
      </div>
      <label
        className="skjemaelement__label"
        htmlFor="postboksadresse-gyldig-til"
      >
        Gyldig til
      </label>
      <div
        onBlur={[Function]}
        onKeyDown={[Function]}
        tabIndex={undefined}
      >
        <div
          className="nav-datovelger"
        >
          <p
            className="sr-only"
            id="undefined_srDesc"
          >
            Dato må være mellom "02.01.1970" og "01.01.1971". 
          </p>
          <div
            className="nav-datovelger__inputContainer"
          >
            <input
              aria-describedby="undefined_srDesc"
              aria-invalid={false}
              autoComplete="off"
              autoCorrect="off"
              className="nav-datovelger__input"
              disabled={undefined}
              id="postboksadresse-gyldig-til"
              maxLength={10}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d{2}.\\\\d{2}.\\\\d{4}"
              type="text"
              value=""
            />
            <button
              aria-expanded={false}
              aria-label="Kalender"
              className="nav-datovelger__kalenderknapp"
              disabled={undefined}
              onClick={[Function]}
              role="button"
              type="button"
            >
              <svg
                aria-hidden="true"
                height={16}
                role="presentation"
                viewBox="0 0 18 18"
                width={16}
              >
                <title>
                  Kalenderikon
                </title>
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="#0067C5"
                >
                  <path
                    d="M4 2.667H1.333v14h15.334v-14H14"
                  />
                  <path
                    d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="2"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i utlandet
        </label>
      </div>
    </div>
    <div
      className="c7"
    >
      <button
        className="knapp knapp--standard knapp--disabled"
      >
        Avbryt
      </button>
      <button
        className="knapp knapp--hoved knapp--disabled"
      >
        Endre adresse
      </button>
    </div>
  </fieldset>
</form>
`;

exports[`Rendrer adresseform riktig ved midlertidig utenlandsadresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c3 {
  font-size: 11px;
}

.c2 {
  margin-top: 3px;
}

.c2 .typo-etikett-liten {
  line-height: 1rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 > * {
  margin-left: 1em;
}

.c1 {
  margin-top: 2em;
}

.c4 {
  margin-right: 2em;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<form
  onSubmit={[Function]}
>
  <fieldset
    className="c0"
    disabled={false}
  >
    <h2
      className="typo-undertittel"
    >
      Adresse
    </h2>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="0"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Bostedsadresse fra folkeregisteret
        </label>
      </div>
    </div>
    <div>
      <p
        className="typo-undertekst"
      >
        Islandsgate 49
      </p>
      <p
        className="typo-undertekst"
      >
        7693 Hovedøya
      </p>
    </div>
    <div
      className="c2"
    >
      <p
        className="typo-etikett-liten"
      >
        <span
          className="c3"
        >
          Endret 
          25.11.2017
           
          i Folkeregisteret
        </span>
      </p>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={false}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="1"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i Norge
        </label>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="skjemaelement skjemaelement--horisontal"
      >
        <input
          checked={true}
          className="skjemaelement__input radioknapp"
          id={undefined}
          name="2"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="skjemaelement__label"
          htmlFor={undefined}
        >
          Midlertidig adresse i utlandet
        </label>
      </div>
      <div>
        <div
          className="c4"
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Land
            </label>
            <div
              className="selectContainer input--m"
            >
              <select
                className="skjemaelement__input"
                disabled={false}
                id={undefined}
                onChange={[Function]}
                value=""
              >
                <option
                  disabled={true}
                  value=""
                >
                  Velg land
                </option>
                <option
                  value="BMU"
                >
                  BERMUDA
                   (
                  BMU
                  )
                </option>
                <option
                  value="COL"
                >
                  COLOMBIA
                   (
                  COL
                  )
                </option>
                <option
                  value="LVS"
                >
                  LANGTVEKKISTAN
                   (
                  LVS
                  )
                </option>
                <option
                  value="MRS"
                >
                  MARS
                   (
                  MRS
                  )
                </option>
                <option
                  value="NRN"
                >
                  NARNIA
                   (
                  NRN
                  )
                </option>
                <option
                  value="NOR"
                >
                  NORGE
                   (
                  NOR
                  )
                </option>
                <option
                  value="ESP"
                >
                  SPANIA
                   (
                  ESP
                  )
                </option>
                <option
                  value="USA"
                >
                  USA
                   (
                  USA
                  )
                </option>
              </select>
            </div>
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          style={
            Object {
              "flex": 4,
              "marginRight": 15,
            }
          }
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Adresselinje 1
            </label>
            <input
              className="skjemaelement__input input--xxl"
              defaultValue="Ut av landet"
              id={undefined}
              name={undefined}
              onChange={[Function]}
              type="text"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          style={
            Object {
              "flex": 4,
              "marginRight": 15,
            }
          }
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Adresselinje 2
            </label>
            <input
              className="skjemaelement__input input--xxl"
              defaultValue="Rundt svingen"
              id={undefined}
              name={undefined}
              onChange={[Function]}
              type="text"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          style={
            Object {
              "flex": 4,
              "marginRight": 15,
            }
          }
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor={undefined}
            >
              Adresselinje 3
            </label>
            <input
              className="skjemaelement__input input--xxl"
              defaultValue={undefined}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              type="text"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
      </div>
      <label
        className="skjemaelement__label"
        htmlFor="utlandsadresse-datovelger"
      >
        Gyldig til
      </label>
      <div
        onBlur={[Function]}
        onKeyDown={[Function]}
        tabIndex={undefined}
      >
        <div
          className="nav-datovelger"
        >
          <p
            className="sr-only"
            id="undefined_srDesc"
          >
            Dato må være mellom "02.01.1970" og "01.01.1971". 
          </p>
          <div
            className="nav-datovelger__inputContainer"
          >
            <input
              aria-describedby="undefined_srDesc"
              aria-invalid={false}
              autoComplete="off"
              autoCorrect="off"
              className="nav-datovelger__input"
              disabled={undefined}
              id="utlandsadresse-datovelger"
              maxLength={10}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d{2}.\\\\d{2}.\\\\d{4}"
              type="text"
              value=""
            />
            <button
              aria-expanded={false}
              aria-label="Kalender"
              className="nav-datovelger__kalenderknapp"
              disabled={undefined}
              onClick={[Function]}
              role="button"
              type="button"
            >
              <svg
                aria-hidden="true"
                height={16}
                role="presentation"
                viewBox="0 0 18 18"
                width={16}
              >
                <title>
                  Kalenderikon
                </title>
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="#0067C5"
                >
                  <path
                    d="M4 2.667H1.333v14h15.334v-14H14"
                  />
                  <path
                    d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c6"
    >
      <button
        className="knapp knapp--standard knapp--disabled"
      >
        Avbryt
      </button>
      <button
        className="knapp knapp--hoved knapp--disabled"
      >
        Endre adresse
      </button>
    </div>
  </fieldset>
</form>
`;
